deploy: 9853af63657b613fdd2fb1b9554a200eea8afa14

--- a/intro.html
+++ b/intro.html
@@ -52,7 +52,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Waves" href="velocities.html" />
-    <link rel="prev" title="Jupyter Book for OARC Skills Workshop" href="landing.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="4skillsWorkshopSlides.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
     
@@ -271,11 +271,11 @@
 <div class='prev-next-bottom'>
     
     <div id="prev">
-        <a class="left-prev" href="landing.html" title="previous page">
+        <a class="left-prev" href="4skillsWorkshopSlides.html" title="previous page">
             <i class="prevnext-label fas fa-angle-left"></i>
             <div class="prevnext-info">
                 <p class="prevnext-label">previous</p>
-                <p class="prevnext-title">Jupyter Book for OARC Skills Workshop</p>
+                <p class="prevnext-title">&lt;no title&gt;</p>
             </div>
         </a>
     </div>
